crates/jsonschema-codegen/tests/ui/invalid_minimum_type.stderr
error: "x" is not of type "number"
 --> tests/ui/invalid_minimum_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"minimum":"x"}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
