crates/jsonschema-codegen/tests/ui/invalid_minimum_type.rs
#[jsonschema::validator(schema = r#"{"minimum":"x"}"#)]
struct InvalidMinimumTypeValidator;

fn main() {}
